tests/ast_interpreter/err_logical_and_int.expected
<string>:1:1: error: expected a boolean value
5 && true;
^
