tests/ast_interpreter/err_logical_and_int.nx
fun main() {
    5 && true;
}
